<resources>
    <string name="app_name">demo</string>
    <string name="teachers_login1">Teachers Login</string>
    <string name="students_login1">Students login</string>
    <string name="select_the_portal">Select the portal</string>
    <string name="students_login">Students Login</string>
    <string name="LOGIN">LOGIN</string>
    <string name="regno">Enter your rollno</string>
    <string name="dep">DEP</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="teachers_login">Teachers Login</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
</resources>