<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView3"
        style="@android:style/Widget.ActionBar"
        android:layout_width="309dp"
        android:layout_height="76dp"
        android:layout_marginTop="96dp"
        android:gravity="center"
        android:text="@string/teachers_login"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"
       />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="295dp"
        android:layout_height="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="260dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:textColor="@color/white"
        android:textColorHint="#B0BEC5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""/>

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="298dp"
        android:layout_height="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="196dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:visibility="visible"
        android:textColor="@color/white"
        android:textColorHint="#B0BEC5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""/>

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="196dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="328dp"
        android:visibility="visible"
        android:ems="10"
        android:hint="@string/dep"
        android:inputType="textCapCharacters"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textColorHint="#B0BEC5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""  />

    <Button
        android:id="@+id/button4"
        android:layout_width="92dp"
        android:layout_height="52dp"
        android:layout_marginStart="268dp"
        android:layout_marginTop="392dp"
        android:background="#65040405"
        android:text="@string/LOGIN"
        android:textSize="15sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"/>


</android.support.constraint.ConstraintLayout>