<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#34495E">


    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="77dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="244dp"
        android:background="#808B96 "
        android:text="@string/teachers_login1"
        android:onClick="buttonClick1"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button2"
        android:layout_width="248dp"
        android:layout_height="76dp"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="316dp"
        android:background="#808B96 "
        android:text="@string/students_login1"
        android:onClick="buttonClick"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="270dp"
        android:layout_height="69dp"
        android:visibility="visible"
        android:layout_marginStart="76dp"
        android:layout_marginTop="143dp"
        android:layout_marginEnd="65dp"
        android:text="@string/select_the_portal"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>